	 no longer modal.
20040104 widget/{browse,widget}.c: fix up the widget UIs for the new
	 tape browser code.
20040104 tape.[ch], ui/gtk/browse.c: add a 'tape modified' indicator to
	 the GTK+ tape browser window.
20040104 tape.[ch], utils.c, ui/ui.h, ui/gtk/{confirm,gtkui.c}: confirm
	 before an attempt is made to close a modified tape.
20040104 widget/{menu,widget}.c: fix up widget UIs for new confirm code.
20040105 tape.c, ui/gtk/{confirm,gtkui}.c: check for tape modification
	 on exit.
20040105 specplus3.[ch], ui/ui.h, ui/gtk/gtkui.c: make writes to +3 disks
	 only be committed when explicitly requested by the user.
20040105 ui/gtk/gtkui.c, widget/{menu.c,menu_data.c,widget_internals.h}:
	 fix up the widget UIs and non-lib765 systems wrt the disk writing
	 changes.
20040106 ui/gtk/gtkui.c: merge the gtkui_disk_open_[ab] and
	 gtkui_disk_eject(_write)_[ab] functions.
20040106 tape.c: put the header type/name in the tape browser 'details'
	 field.
20040107 trdos.c: always non-busy just after a reset (part of patch
	 #871182) (Fred).
20040107 trdos.c: update the statusbar disk indicator (next part of patch
	 #871182) (Fred).
20040107 utils.c: replace arbitrary constant by PATH_MAX (next part of
	 patch #871182) (Fred).
20040108 specplus3.c, trdos.[ch], utils.[ch], ui/ui.h, ui/gtk/gtkui.c:
	 make writes to TR-DOS disks need explicit commits.
20040108 widget/menu.c: fix up widget UIs for the TR-DOS write scheme.
20040108 ui/gtk/{Makefile.am,debugger.c,gtkinternals.h,gtkui.c}: add
	 a simple memory browser.
20040110 machine.c: remove pointless free( NULL ) (patch #874507)
	 (Stuart Brady).
20040110 TAG: Release-0_6_2-trunk
	 BRANCH: Release-0_6_2-branch (from Release-0_6_2-trunk)
20040207 Create and use a new UI_ERROR_WARNING error level.
20040207 Remove duplicated ui_verror code.
20040207 widget/error.c: #include "fuse.h".
20040214 First pass at code to allow for a dynamically modifiable
	 peripheral list.