@@ -47,7 +47,6 @@ static libspectrum_byte empty_chunk[0x2000];
 const static periph_t peripherals[] = {
   { 0x0001, 0x0000, spectrum_ula_read, spectrum_ula_write },
   { 0x0004, 0x0000, printer_zxp_read, printer_zxp_write },
-  { 0x00e0, 0x0000, joystick_kempston_read, NULL },
 };
 
 const static size_t peripherals_count =
@@ -101,8 +100,7 @@ spec16_reset( void )
 			    machine_current->rom_length[0] );
   if( error ) return error;
 
-  periph_clear();
-  error = periph_register_n( peripherals, peripherals_count );
+  error = periph_setup( peripherals, peripherals_count, 1 );
   if( error ) return error;
 
   memory_map[0].page = &ROM[0][0x0000];
