@@ -43,7 +43,6 @@
 
 const static periph_t peripherals[] = {
   { 0x0001, 0x0000, spectrum_ula_read, spectrum_ula_write },
-  { 0x00e0, 0x0000, joystick_kempston_read, NULL },
   { 0xc002, 0xc000, ay_registerport_read, ay_registerport_write },
   { 0xc002, 0x8000, NULL, ay_dataport_write },
   { 0xc002, 0x4000, NULL, specplus3_memoryport_write },
@@ -103,8 +102,7 @@ int specplus2a_reset(void)
 			    machine_current->rom_length[3] );
   if( error ) return error;
 
-  periph_clear();
-  error = periph_register_n( peripherals, peripherals_count );
+  error = periph_setup( peripherals, peripherals_count, 1 );
   if( error ) return error;
 
   return specplus3_plus2a_common_reset();
