@@ -3,7 +3,7 @@
 # options.pl: generate options dialog boxes
 # $Id$
 
-# Copyright (c) 2002-2003 Philip Kendall
+# Copyright (c) 2002-2004 Philip Kendall
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -36,7 +36,7 @@ die "No data file specified" unless @ARGV;
 my @dialogs = Fuse::Dialog::read( shift @ARGV );
 
 print Fuse::GPL( 'options.c: options dialog boxes',
-		 '2001-2002 Philip Kendall' ) . << "CODE";
+		 '2001-2004 Philip Kendall' ) . << "CODE";
 
 /* This file is autogenerated from options.dat by options.pl.
    Do not edit unless you know what you\'re doing! */
@@ -56,6 +56,7 @@ print Fuse::GPL( 'options.c: options dialog boxes',
 #include "fuse.h"
 #include "gtkinternals.h"
 #include "options.h"
+#include "periph.h"
 #include "settings.h"
 CODE
 
@@ -204,6 +205,11 @@ CODE
     print << "CODE";
   gtk_widget_destroy( ptr->dialog );
 
+CODE
+
+    print "  $_->{posthook}();\n\n" if $_->{posthook};
+
+    print << "CODE";
   display_refresh_all();
 
   gtk_main_quit();
