@@ -12,6 +12,7 @@ Checkbox, A(u)to-save settings, autosave_settings, KEYBOARD_u
 Checkbox, (C)olour TV, colour_tv, KEYBOARD_c
 Checkbox, Confirm (d)angerous actions, confirm_dangerous, KEYBOARD_d
 Checkbox, Emulate (p)rinters, printer, KEYBOARD_p
+Posthook, periph_update
 
 rzx
 RZX Options
